Fix last commit

--- a/index.html
+++ b/index.html
@@ -3565,7 +3565,7 @@
         <div class="d-flex align-content-start">
           <div class="mr-2 mb-2"><a href="https://iterative.ai/" target="_blank" rel="noopener"><img src="/media/icons/brands/iterative.svg" width="56px" height="56px" alt="Iterative" loading="lazy"></a></div>
           <div>
-        <a href="https://www.coursera.org/learn/building-deep-learning-models-with-tensorflow" target="_blank" rel="noopener"><div class="section-subheading card-title exp-title text-muted my-0">Iterative Tools for Data Scientists &amp; Analysts</div></a><div class="card-subtitle my-0 article-metadata"><a href="https://iterative.ai/" target="_blank" rel="noopener">Iterative</a><span class="middot-divider"></span>
+        <div class="section-subheading card-title exp-title text-muted my-0">Iterative Tools for Data Scientists &amp; Analysts</div><div class="card-subtitle my-0 article-metadata"><a href="https://iterative.ai/" target="_blank" rel="noopener">Iterative</a><span class="middot-divider"></span>
 
               Mar. 2023
               
